--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,14 @@
-<footer class="bg-dark py-3 mt-auto">
-	<div class="container">
-		<span class="text-muted">placeholder</span>
+<footer class="footer">
+	<div class="content has-text-centered">
+		<p>
+			A Worcester, MA based tourism directory by
+			<a href="https://github.com/kevinsekuj">Kevin Sekuj</a>. The source
+			code is licensed
+			<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+			The website content is licensed
+			<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
+				>CC BY NC SA 4.0</a
+			>.
+		</p>
 	</div>
 </footer>
