--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,47 +1,64 @@
 <% layout('/partials/boilerplate') %>
 
-<h1>Register</h1>
-<form action="/register" method="POST" novalidate class="needs-validation">
-	<div>
-		<label for="email">Email:</label>
-		<input
-			class="form-control"
-			type="email"
-			name="email"
-			id="email"
-			placeholder="Enter a valid email"
-			required
-		/>
-		<div class="valid-feedback">Perfect!</div>
-		<div class="invalid-feedback">Please enter a valid email.</div>
+
+<div class="box" id="registerBox">
+<h3 class="subtitle is-3">Sign up</h3>
+<form action="/register" method="POST">
+	<div class="field">
+		<label class="label" for="email">Email</label>
+		<div class="control has-icons-left has-icons-right">
+			<input
+				class="input is-dark"
+				type="email"
+				name="email"
+				id="email"
+				placeholder="Enter a valid email"
+				required
+			/>
+			<span class="icon is-small is-left">
+				<i class="fas fa-envelope"></i>
+			</span>
+		</div>
+
+	<div class="field">
+		<label class="label" for="username">Username</label>
+		<div class="control has-icons-left has-icons-right">
+			<input
+				class="input is-dark"
+				type="text"
+				name="username"
+				id="username"
+				placeholder="Enter a username"
+				required
+			/>
+			<span class="icon is-small is-left">
+				<i class="fas fa-user"></i>
+			</span>
+		</div>
 	</div>
 
-	<div class="mt-2">
-		<label for="username">Username:</label>
-		<input
-			class="form-control"
-			type="text"
-			name="username"
-			id="username"
-			placeholder="Enter a username"
-			required
-		/>
-		<div class="valid-feedback">Perfect!</div>
-		<div class="invalid-feedback">Please enter a valid site username.</div>
+	<div class="field">
+		<label class="label" for="password">Password</label>
+		<p class="control has-icons-left">
+			<input
+				class="input is-dark"
+				type="password"
+				type="password"
+				name="password"
+				id="password"
+				placeholder="Enter a password"
+				required
+			/>
+			<span class="icon is-small is-left">
+				<i class="fas fa-lock"></i>
+			</span>
+		</p>
 	</div>
 
-	<div class="mt-2">
-		<label for="password">Password:</label>
-		<input
-			class="form-control"
-			type="password"
-			name="password"
-			id="password"
-			placeholder="Enter a password"
-			required
-		/>
-		<div class="valid-feedback">Perfect!</div>
-		<div class="invalid-feedback">Please enter a valid password.</div>
+	<div class="field is-grouped">
+		<div class="control">
+			<button class="button is-dark">Register</button>
+		</div>
 	</div>
-	<button class="btn btn-success mt-3">Register</button>
 </form>
+</div>
