--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,33 +1,44 @@
 <% layout('/partials/boilerplate') %>
 
-<h1>Login</h1>
-<form action="/login" method="POST" novalidate class="needs-validation">
-	<div class="mt-2">
-		<label for="username">Username:</label>
-		<input
-			class="form-control"
-			type="text"
-			name="username"
-			id="username"
-			placeholder="Enter a username"
-			required
-		/>
-		<div class="valid-feedback">Perfect!</div>
-		<div class="invalid-feedback">Please enter a valid site username.</div>
+<div class="box" id="registerBox">
+	<h3 class="subtitle is-3">Sign in</h3>
+	<form action="/login" method="POST">
+		<div class="field">
+			<label class="label" for="username">Username</label>
+			<div class="control has-icons-left has-icons-right">
+				<input
+					class="input is-dark"
+					type="text"
+					name="username"
+					id="username"
+					placeholder="Enter your username"
+					required
+				/>
+				<span class="icon is-small is-left">
+					<i class="fas fa-user"></i>
+				</span>
+			</div>
+	
+		<div class="field">
+			<label class="label">Password</label>
+			<div class="control has-icons-left has-icons-right">
+				<input
+					class="input is-dark"
+					type="password"
+					name="password"
+					id="password"
+					placeholder="Enter a password"
+					required
+				/>
+				<span class="icon is-small is-left">
+					<i class="fas fa-lock"></i>
+				</span>
+			</div>
+		</div>
+		<div class="field is-grouped">
+			<div class="control">
+				<button class="button is-dark">Submit</button>
+			</div>
+		</div>
+	</form>
 	</div>
-
-	<div class="mt-2">
-		<label for="password">Password:</label>
-		<input
-			class="form-control"
-			type="password"
-			name="password"
-			id="password"
-			placeholder="Enter a password"
-			required
-		/>
-		<div class="valid-feedback">Perfect!</div>
-		<div class="invalid-feedback">Please enter a valid password.</div>
-	</div>
-	<button class="btn btn-success mt-3">Login</button>
-</form>
