--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -5,24 +5,48 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<title></title>
-
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/swiper/swiper-bundle.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/swiper/swiper-bundle.min.css"
+		/>
 
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
 		/>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+		<link rel="stylesheet" type="text/css" href="/stylesheets/stars.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+			rel="stylesheet"
+		/>
+
+		<script
+			src="https://kit.fontawesome.com/638e3303af.js"
+			crossorigin="anonymous"
+		></script>
 		<script src="/scripts/map.js"></script>
 	</head>
 
-	<body class="d-flex flex-column vh-100">
-		<%- include('../partials/nav') %>
-		<main class="container mt-3">
-			<%= success %> <%= error %> <%- body %>
-		</main>
+	<body>
+		<%- include('../partials/nav') %> <%-
+		include('../partials/alertsuccess') %> <%-
+		include('../partials/alerterror') %>
+
+		<main><%- body %></main>
 
 		<%- include('../partials/footer') %>
 
@@ -32,5 +56,8 @@
 			async
 			src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.MAPS_KEY%>&callback=initMap&libraries=&v=weekly"
 		></script>
+		<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+		<script src="/scripts/swiper.js"></script>
 	</body>
 </html>
