--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,48 +1,60 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" >placeholder</a>
+<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+	<div class="navbar-brand">
+		<a
+			role="button"
+			class="navbar-burger"
+			aria-label="menu"
+			aria-expanded="false"
+			data-target="navbarBasicExample"
+		>
+			<span aria-hidden="true"></span>
+			<span aria-hidden="true"></span>
+			<span aria-hidden="true"></span>
+		</a>
+	</div>
 
-        <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a
-                        class="nav-link active"
-                        aria-current="page"
-                        href="/"
-                        >Home</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sites">Tourist Sites</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sites/add">Add a new site</a>
-                </li>
-                <% if(!currentUser)  { %> 
-                <li class="nav-item">
-                    <a class="nav-link" href="/sites/add">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/sites/add">Register</a>
-                </li>
-                <% } else {%> 
-                <li class="nav-item">
-                    <a class="nav-link" href="/sites/add">Logout</a>
-                </li>
-                <% } %> 
-                </li>
-            </ul>
-        </div>
-    </div>
+	<div id="navbarBasicExample" class="navbar-menu">
+		<div class="navbar-start">
+			<a class="navbar-item" href="/"> Home </a>
+
+			<a class="navbar-item" href="/sites"> Attractions </a>
+
+			<a class="navbar-item" href="/sites/add"> Add new location </a>
+
+			<div class="navbar-item has-dropdown is-hoverable">
+				<a class="navbar-link"> Links </a>
+
+				<div class="navbar-dropdown">
+					<a class="navbar-item" href="https://github.com/kevinsekuj">
+						GitHub
+					</a>
+					<a
+						class="navbar-item"
+						href="https://www.linkedin.com/in/kevinsekuj/"
+					>
+						LinkedIn
+					</a>
+					<hr class="navbar-divider" />
+					<a class="navbar-item" href="mailto:kevinsekuj@gmail.com">
+						Contact/report bugs
+					</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="navbar-end">
+			<div class="navbar-item">
+				<div class="buttons">
+					<% if(!currentUser) { %>
+					<a class="button is-white" href="/register">
+						<strong>Sign up</strong>
+					</a>
+					<a class="button is-white" href="/login"> Sign in </a>
+					<% } else {%>
+					<a class="button is-white" href="/logout">Sign out</a>
+					<%}%>
+				</div>
+			</div>
+		</div>
+	</div>
 </nav>
