--- a/views/sites/index.ejs
+++ b/views/sites/index.ejs
@@ -1,12 +1,33 @@
 <% layout('/partials/boilerplate') %>
 
-<h1>Sites</h1>
-<ul>
-	<% for( let site of sites) { %>
-	<li><a href="/sites/<%=site._id%>"> <%=site.name%> </a></li>
+<div class="main-wrapper">
+	<% for (let site of sites) { %>
+	<div class="card">
+		<header class="card-header">
+			<p class="card-header-title is-centered"><%= site.name %></p>
+		</header>
+		<% if (site.images.length) { %>
+		<div class="card-image">
+			<figure class="image is-square">
+				<img src="<%= site.images[0].url%> " />
+			</figure>
+		</div>
+		<% } else { %>
+		<div class="card-image">
+			<figure class="image is-square">
+				<img src="https://bulma.io/images/placeholders/1280x960.png" />
+			</figure>
+		</div>
+		<%}%>
+		<div class="media-content ml-2">
+			<p class="title is-3 mt-2"><%=site.location%></p>
+			<p class="subtitle is-6 mb-3">
+				Submitted by <%=site.author.username%>
+			</p>
+		</div>
+		<footer class="card-footer">
+			<a href="/sites/<%=site._id %>" class="card-footer-item">View</a>
+		</footer>
+	</div>
 	<% } %>
-</ul>
-
-<div>
-	<a href="/sites/add">Add a new site</a>
 </div>
