--- a/views/sites/edit.ejs
+++ b/views/sites/edit.ejs
@@ -105,6 +105,7 @@
 									method="POST"
 								>
 									<button
+										form="deleteForm"
 										type="submit"
 										class="button is-danger is-outlined"
 										id="deletepage"
@@ -156,3 +157,9 @@
 		<div class="section"></div>
 	</div>
 </div>
+
+<form
+	action="/sites/<%=site._id%>?_method=DELETE"
+	method="POST"
+	id="deleteForm"
+></form>
