--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,8 +16,9 @@ button {
 
 #flashsuccess {
 	position: absolute;
-	left: 40%;
+	left: 50%;
 	transform: translateX(-50%);
+	z-index: 1;
 }
 
 #flashsuccess p {
@@ -32,6 +33,7 @@ button {
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
+	z-index: 1;
 }
 
 #flasherror p {
