--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer">
 	<div class="content has-text-centered">
 		<p>
-			A Worcester, MA based tourism directory by
-			<a href="https://github.com/kevinsekuj">Kevin Sekuj</a>. The source
+			A mock Worcester, MA based tourism directory by
+			<a href="https://github.com/kevinsekuj">Kevin</a>. The source
 			code is licensed
 			<a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
 			The website content is licensed
